# evolution-of-todo-hackathon-2

./: .gitignore  FIXES_SUMMARY.md  vercel.json
.claude/: settings.local.json
.claude/agents/: agent-behavior-validator.md  cli-code-optimizer.md  mcp-tool-specialist.md
.specify/memory/: constitution.md
phase-1/: README.md
phase-1-cli/: .gitignore  pyproject.toml
phase-1-cli/specs/: quickstart.md  tasks.md
phase-2/: .env  README.md
phase-3/: README.md
phase-4/: DOCKER.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml
phase-4/backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
phase-4/backend/src/: __init__.py  main.py
phase-4/backend/src/agent/: __init__.py  instructions.py  runner.py
phase-4/backend/src/api/: __init__.py  auth.py  chat.py
phase-4/backend/src/core/: config.py  database.py  security.py
phase-4/backend/src/mcp/: __init__.py  server.py
phase-4/backend/src/mcp/tools/: __init__.py  complete_task.py  create_task.py  delete_task.py  list_tasks.py  update_task.py
phase-4/backend/src/models/: __init__.py  conversation.py  message.py  task.py  todo.py  tool_log.py
phase-4/backend/src/schemas/: chat.py  todo.py  user.py
phase-4/backend/src/services/: __init__.py  conversation_service.py  message_service.py
phase-4/backend/tests/: conftest.py  test_auth.py  test_isolation.py  test_todos.py
phase-5/: DEPLOYMENT.md  DOCKER.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  docker-compose.yml
(+241 files in other folders)
